@@ -946,7 +946,7 @@ documentation.</p>
   </tr>
 
   <tr valign="top">
-    <td nowrap><a href="CoreTasks/style.html">Xslt/Style</a></td>
+    <td nowrap><a href="CoreTasks/style.html">XSLT</a></td>
     <td><p>Processes a set of documents via XSLT.</p></td>
   </tr>
 
