@@ -31,7 +31,6 @@ available=org.apache.tools.ant.taskdefs.Available
 filter=org.apache.tools.ant.taskdefs.Filter
 fixcrlf=org.apache.tools.ant.taskdefs.FixCRLF
 patch=org.apache.tools.ant.taskdefs.Patch
-style=org.apache.tools.ant.taskdefs.XSLTProcess
 xslt=org.apache.tools.ant.taskdefs.XSLTProcess
 touch=org.apache.tools.ant.taskdefs.Touch
 signjar=org.apache.tools.ant.taskdefs.SignJar
@@ -128,7 +127,6 @@ vajimport=org.apache.tools.ant.taskdefs.optional.ide.VAJImport
 telnet=org.apache.tools.ant.taskdefs.optional.net.TelnetTask
 csc=org.apache.tools.ant.taskdefs.optional.dotnet.CSharp
 ilasm=org.apache.tools.ant.taskdefs.optional.dotnet.Ilasm
-WsdlToDotnet=org.apache.tools.ant.taskdefs.optional.dotnet.WsdlToDotnet
 wsdltodotnet=org.apache.tools.ant.taskdefs.optional.dotnet.WsdlToDotnet
 importtypelib=org.apache.tools.ant.taskdefs.optional.dotnet.ImportTypelib
 stylebook=org.apache.tools.ant.taskdefs.optional.StyleBook
@@ -216,3 +214,5 @@ copydir=org.apache.tools.ant.taskdefs.Copydir
 copyfile=org.apache.tools.ant.taskdefs.Copyfile
 deltree=org.apache.tools.ant.taskdefs.Deltree
 rename=org.apache.tools.ant.taskdefs.Rename
+WsdlToDotnet=org.apache.tools.ant.taskdefs.optional.dotnet.WsdlToDotnet
+style=org.apache.tools.ant.taskdefs.XSLTProcess
